Future/styles.css
html {
	font-size: 16px;
	margin: 0;
	padding: 0;
	width: 100%;
}

body {
	width: 1600px;
	position: relative;
	margin: 0;
	padding: 0;
}

a {
	text-decoration: none;
}

h1 {
	margin: 0;
}

h2 {
	margin: 0;
}

button {
	padding: 0;
	margin: 0;
	outline: 0;
	border: 0;
	background-color: transparent;
}


.intro-block {
	width: 100%;
	background-image: url('images/woman.png');
	background-size: 1191px 994px;
	height: 1050px;
	background-repeat: no-repeat;
	box-sizing: border-box;
	background-position: -10px 58px;
	padding: 80px 215px 0 215px;
}

.intro-upper-text {
	width: 1170px;
	margin-right: 215px;
	margin-bottom: 125px;
}

.logo {
	font-family: 'Roboto', sans-serif;
	font-weight: medium;
	font-size: 2.5rem;
	float: left;
	position: absolute;
	z-index: 2;
}

.intro-block nav {
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
	position: relative;
	z-index: 2;

}

#search-button, #collection-button, #details-button {
	font-family: 'Open Sans', sans-serif;
	font-weight: 600;
	font-size: 1.125rem;
	color: black;
	padding: 20px 0;
	background-color: #ffffff;
	width: 187.5px;
	text-align: center;
	box-sizing: border-box;
}

#search-button:hover, #collection-button:hover {
	background-color: gray;
}

#search-button {
	border-top-left-radius: 100px;
	border-bottom-left-radius: 100px;
	position: relative;
}

#search-button::before {
	content: url('images/lens.png');
	position: absolute;
	left: 25px;
	bottom: 14px;
}


#search-button::after {
	content: "";
	border-left: 1px solid #e0e0e0;
	height: 30px;
	position: absolute;
	left: 100%;
}

#collection-button {
	border-top-right-radius: 100px;
	border-bottom-right-radius: 100px;
}

#collection-button::after {
	position: absolute;
	content: "";
	border-right: 2px solid black;
	border-bottom: 2px solid black;
	width: 10px;
	height: 10px;
	right: 25px;
	top: 25px;
	transform: rotate(45deg);
}

.mask {
	background-image: url('images/gradient-bg.png');
	background-repeat: no-repeat;
	width: 100%;
	height: 1050px;
	top: 0;
	position: absolute;
}

.intro-main-text {
	width: 520px;
	position: relative;
	z-index: 2;
	margin: 0 0 0 655px;
	font-family: 'Roboto', sans-serif;
	margin-right: 215px;
}

.intro-main-text h1 {
	font-size: 7.1875rem;
	font-weight: bold;
}

.intro-main-text h2 {
	margin-top: 46px;
	font-size: 3.125rem;
	font-weight: medium;
	font-family: 'Roboto', sans-serif;
	margin-bottom: 95px;
}

.h-white {
	color: white;
}

.h-yellow {
	color: yellow;
}

.h-purple {
	color: #8c84f9;
}

#details-button {
	border-radius: 100px;
	position: relative;
	z-index: 2;
	padding-left: 52px;
	padding-right: 86px; /* учет места под абсолютно-позиционированную стрелку */
	margin-left: 660px;
}

#details-button:after {
	content: url('images/arrow.svg');
	position: absolute;
	right: 52px;
	top: 17px;
}

.intro-square {
	border: 4px solid white;
	transform: rotate(57deg);
	width: 20px;
	height: 20px;
	position: absolute;
	top: 740px;
	right: 100px;
	z-index: 3;
	border-radius: 3px;
}

.intro-circle {
	position: absolute;
	border-radius: 50%;
	border: 8px solid #e3d1fd;
	height: 20px;
	width: 20px;
	z-index: 3;
	top: 185px;
	right: 730px;
}

img.circle-grid {
	position: absolute;
	z-index: 4;
	left: 0;
	top: 0;
}

.bags-block {
	width: 1380px;
	margin: -35px auto;
	padding-top: 100px;
	background-color: white;
	position: relative;
	z-index: 100;
	box-sizing: border-box;
	box-shadow: 10px 10px 30px 3px #f1f2f2;
}

.bags-block h1 {
	font-family: 'Open Sans', sans-serif;
	font-weight: bold;
	text-align: center;
	margin-bottom: 50px;
}

#bags, .watch-grid {
	display: grid;
	grid-template-columns: repeat(3, 350px);
	grid-template-rows: repeat(2, auto);
	grid-gap: 20px 10px;
	justify-content: center;
	padding-bottom: 145px;
}

.good-item {
	text-align: center;
	position: relative;
}
.good-item:hover {
	box-shadow: 1px 1px 10px 3px #f1f2f2;
}

.good-item:hover .price {
	color: #8c84f9;
}

.img-container {
	height: 236px;
	overflow: hidden;
	margin-top: 60px;
}
.img-container img {
	width: auto;
	height: 100%;
}

.good-item h2 {
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	font-size: 1.125rem;
	margin-top: 20px;
	color: #929292;
	margin-bottom: 15px
}


.price {
	font-family: 'Open Sans', sans-serif;
	font-weight: 600;
	font-size: 1.5625rem;
	margin-bottom: 75px;
}

.comments-icon, .likes-icon, .likes-text, .comments-text {
	position: absolute;
	top: 20px;
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	font-size: 0.875rem;
	color: #c4c4c4;
}

.likes-text {
	top: 18px;
	left: 50px;
}

.comments-text {
	top: 18px;
	right: 30px;
}

.likes-text::before {
	content: url('images/likes.png');
	top: 2px;
	position: absolute;
	left: -25px;
}

.comments-text::before {
	content: url('images/comments.png');
	top: 2px;
	position: absolute;
	left: -30px;
}

.buy-button {
	position: absolute;
	color: white;
	background-color: #9f69f5;
	padding: 20px 50px;
	display: inline-block;
	border-radius: 100px;
	bottom: -25px;
	left: 85px;
	font-family: 'Open Sans', sans-serif;
	font-weight: 600;
}

.brand-block {
	width: 100%;
	text-align: left;
	padding: 0 214px;
	margin-top: 280px;
	position: relative;
	box-sizing: border-box;
	height: auto;
}

.brand-text {
	width: 520px;
}

.brand-comments {
	font-size: 1rem;
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	color: #777777;
}

.brand-text h1 {
	font-family: 'Open Sans', sans-serif;
	font-weight: 700;
	font-size: 3.125rem;
	margin-bottom: 40px;
}

.brand-text h2 {
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	font-size: 1.5625rem;
	margin-bottom: 35px;
}

.brand-block .circle-img {
	right: 216px;
	top: -180px; /*30 px here - fake margin*/
	position: absolute;
	text-align: center;
	height: 491px;
	width: 491px;
}

.brand-block img {
	overflow: hidden;
	height: auto;
}

.circle-img .white-circle {
	border-radius: 150px;
	height: 300px;
	width: 300px;
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -149px;
	margin-top: -157px;
	background-color: white;
}

.watch-block {
	margin: 300px 123px 0 123px;
	box-shadow: 10px 10px 30px 3px #f1f2f2;
	box-sizing: border-box;
	overflow: hidden;
}

.watch-block h1 {
	margin-top: 100px;
	font-size: 3.125rem;
	font-family: 'Open Sans', sans-serif;
	font-weight: 700;
	margin-bottom: 100px;
	text-align: center;
}

.watch-block nav {
	margin: 0 auto;
	display: flex;
	flex-direction: row;
	width: 1060px;
	justify-content: space-around;
	overflow: hidden;
	border-radius: 100px;
	box-sizing: border-box;
	padding: 30px 90px;
	box-shadow: 10px 10px 30px 3px #f1f2f2;
	color: #333333;
}

.watch-block nav a {
	display: block;
	font-size: 0.9375rem;//1.25rem;
	color: black;
	font-family: 'Open Sans', sans-serif;
	font-weight: 600;
}

.watch-block nav a.active {
	color: #8c84f9;
	font-size: 1.25rem;
	margin-top: -5px;
}

.watch-grid {
	background-color: white;
	z-index: 2;
	position: relative;
	margin-top: 50px;
}

.newsletter-block {
	overflow: hidden;
	position: relative;
	box-sizing: border-box;
	width: 100%;
	background-color: #8c84f9;
	height: 490px;
	margin-top: -70px;
	z-index: 1;
}

.newsletter-block h1 {
	position: relative;
	font-family: 'Open Sans', sans-serif;
	font-weight: 700;
	font-size: 3.125rem;
	margin-top: 100px;
	margin-bottom: 80px;
	color: white;
	text-align: center;
	z-index: 1;
}

.newsletter-block input[type="text"] {
	display: block;
	width: 850px;
	height: 75px;
	margin: 0 auto;
	border-radius: 100px;
	border: 0;
	padding: 0 30px;
	font-family: 'Open Sans', sans-serif;
	font-weight: 400px;
	font-size: 1.25rem;
	outline: none;
}

.submit-letter {
	font-family: 'Open Sans', sans-serif;
	font-weight: 600;
	font-size: 1.25rem;
	color: white;
	position: absolute;
	left: 1052px;
	top: 252px;
	background-color: #8c84f9;
	padding: 20px 65px;
	border-radius: 100px;
	cursor: pointer;
}

footer {
	height: 400px;
	width: 100%;
}

footer h1 {
	box-sizing: border-box;
	font-family: 'Roboto', sans-serif;
	font-weight: medium;
	font-size: 2.5rem;
	padding-top: 75px;
	text-align: center;
}

footer nav {
	display: flex;
	flex-direction: row;
	margin: 0 auto;
	justify-content: space-around;
	margin-top: 45px;
	width: 520px;
}

footer nav a {
	color: #595959;
	font-family: 'Open Sans', sans-serif;
	font-weight: 600;
	font-size: 1.125rem;
	display: block;
}

footer .our-links {
	margin: 0 auto;
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	width: 360px;
	margin-top: 60px;
	margin-bottom: 60px;
}

.our-links a {
	display: flex;
	flex-direction: column;
	height: 50px;
	width: 50px;
	border-radius: 50%;
	justify-content: center;
	text-align: center;
	box-shadow: 0 0 1px 3px #f1f2f2;
	background-color: white;
	color: black;
}

.our-links a:hover {
	color: white;
	background-color: #9971f6;
	box-shadow: none;
}

.our-links a i {
	color: inherit;
	font-size: 1.4375rem;
}

.copyright {
	padding: 25px 0;
	font-family: 'Montserrat', sans-serif;
	font-size: 0.9375rem;
	font-weight: 300;
	background-color: #f6f5f7;
	color: #777777;
	text-align: center;
}

